--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,18 @@
   Command = "npm run build"
   Functions = "lambda"
   Publish = "public"
+
+## Uncomment to use this redirect for Single Page Applications like create-react-app. 
+## Not needed for static site generators.
+#[[redirects]]
+#  from = "/*"
+#  to = "/index.html"
+#  status = 200
+
+# (optional) Settings for Netlify Dev
+# https://github.com/netlify/netlify-dev-plugin#project-detection
+[dev] 
+  command = "npm run start:netlifyDev:command" # Command to start your dev server
+  port = 8000 # Port that the dev server will be listening on
+  functions = "lambda"
+  publish = "public"
