--- a/package.json
+++ b/package.json
@@ -3,6 +3,29 @@
   "description": "A proof of concept for a static generated app.",
   "version": "0.0.1",
   "author": "tobias <tobias@zucali.at>",
+  "license": "MIT",
+  "scripts": {
+    "build:app": "gatsby build",
+    "build:lambda": "netlify-lambda build src/lambda",
+    "build": "yarn run clean && run-p build:*",
+    "clean": "run-p clean:*",
+    "clean:cache": "rimraf .cache",
+    "clean:public": "rimraf public",
+    "clean:functions": "rimraf lambda/*",
+    "deploy": "yarn run netlify deploy",
+    "dev": "yarn run clean && yarn run start",
+    "lint:eslint:fix": "yarn lint:eslint --fix",
+    "lint:eslint": "eslint --ignore-path .gitignore",
+    "lint:fix": "yarn lint:eslint:fix .",
+    "lint": "yarn lint:eslint .",
+    "netlify": "netlify",
+    "start:graphqlDevServer": "node ./internals/graphql-dev-server.js",
+    "start:lambda": "netlify-lambda serve src/lambda",
+    "start:netlifyDev": "netlify dev",
+    "start:netlifyDev:command": "gatsby develop",
+    "start": "run-p start:*",
+    "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
+  },
   "dependencies": {
     "gatsby": "^2.0.76",
     "gatsby-image": "^2.0.20",
@@ -18,33 +41,20 @@
     "react-dom": "^16.7.0",
     "react-helmet": "^5.2.0"
   },
-  "keywords": [
-    "gatsby"
-  ],
-  "license": "MIT",
-  "scripts": {
-    "build:app": "gatsby build",
-    "build:lambda": "netlify-lambda build src/lambda",
-    "build": "yarn run clean && run-p build:*",
-    "clean": "run-p clean:*",
-    "clean:cache": "rimraf .cache",
-    "clean:public": "rimraf public",
-    "clean:functions": "rimraf lambda/*",
-    "deploy": "yarn run netlify deploy",
-    "dev": "yarn run clean && yarn run start",
-    "format": "prettier --write \"src/**/*.js\"",
-    "netlify": "netlify",
-    "start:graphqlDevServer": "node ./internals/graphql-dev-server.js",
-    "start:lambda": "netlify-lambda serve src/lambda",
-    "start:netlifyDev": "netlify dev",
-    "start:netlifyDev:command": "gatsby develop",
-    "start": "run-p start:*",
-    "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
-  },
   "devDependencies": {
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-react-hooks": "^0.0.0",
     "netlify-lambda": "^1.2.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^1.14.2",
     "rimraf": "2.6.3"
-  }
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
