--- a/package.json
+++ b/package.json
@@ -14,19 +14,23 @@
     "clean:functions": "rimraf lambda/*",
     "deploy": "yarn run netlify deploy",
     "dev": "yarn run clean && yarn run start",
+    "dev:graphql": "node ./internals/graphql/devServer.js",
     "lint:eslint:fix": "yarn lint:eslint --fix",
     "lint:eslint": "eslint --ignore-path .gitignore",
     "lint:fix": "yarn lint:eslint:fix .",
     "lint": "yarn lint:eslint .",
     "netlify": "netlify",
-    "start:graphqlDevServer": "node ./internals/graphql-dev-server.js",
     "start:lambda": "netlify-lambda serve src/lambda",
     "start:netlifyDev": "netlify dev",
     "start:netlifyDev:command": "gatsby develop",
     "start": "run-p start:*",
-    "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
+    "test": "jest",
+    "test:debug": "jest --inspect-brk test --runInBand"
   },
   "dependencies": {
+    "babel-jest": "^24.8.0",
+    "babel-preset-gatsby": "^0.1.11",
+    "chokidar": "^3.0.0",
     "gatsby": "^2.0.76",
     "gatsby-image": "^2.0.20",
     "gatsby-plugin-create-client-paths": "^2.0.2",
@@ -36,10 +40,13 @@
     "gatsby-plugin-sharp": "^2.0.14",
     "gatsby-source-filesystem": "^2.0.8",
     "gatsby-transformer-sharp": "^2.1.8",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^24.8.0",
     "netlify-identity-widget": "^1.4.14",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "react-test-renderer": "^16.8.6"
   },
   "devDependencies": {
     "eslint-config-airbnb": "^17.1.0",
