package scripts: run tests before build

--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "author": "tobias <tobias@zucali.at>",
   "license": "MIT",
   "scripts": {
-    "build:app": "gatsby build",
-    "build:lambda": "netlify-lambda build src/lambda",
-    "build": "yarn run clean && yarn run lint && run-p build:*",
+    "build:main:app": "gatsby build",
+    "build:main:lambda": "netlify-lambda build src/lambda",
+    "build:pre:clean": "yarn run clean",
+    "build:pre:lint": "yarn run lint",
+    "build:pre:test": "yarn run test",
+    "build": "run-p build:pre:* && run-p build:main:*",
     "clean": "run-p clean:*",
     "clean:cache": "rimraf .cache",
     "clean:public": "rimraf public",
