--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gatsby-image": "^2.0.20",
     "gatsby-plugin-create-client-paths": "^2.0.2",
     "gatsby-plugin-manifest": "^2.0.9",
+    "gatsby-plugin-netlify-cms": "^4.0.1",
     "gatsby-plugin-offline": "^2.0.16",
     "gatsby-plugin-react-helmet": "^3.0.2",
     "gatsby-plugin-sharp": "^2.0.14",
@@ -46,6 +47,8 @@
     "gatsby-transformer-sharp": "^2.1.8",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.8.0",
+    "netlify-cli": "^2.11.19",
+    "netlify-cms-app": "^2.9.1",
     "netlify-identity-widget": "^1.4.14",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
