--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.8.0",
     "netlify-cli": "^2.11.19",
-    "netlify-cms-app": "^2.9.1",
+    "netlify-cms-app": "^2.9.2-beta.1",
     "netlify-identity-widget": "^1.4.14",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
