--- a/package.json
+++ b/package.json
@@ -36,14 +36,19 @@
     "gatsby": "^2.0.76",
     "gatsby-image": "^2.0.20",
     "gatsby-plugin-create-client-paths": "^2.0.2",
-    "gatsby-plugin-manifest": "^2.0.9",
+    "gatsby-plugin-manifest": "^2.1.1",
+    "gatsby-plugin-netlify": "^2.0.17",
     "gatsby-plugin-netlify-cms": "^4.0.1",
     "gatsby-plugin-offline": "^2.0.16",
     "gatsby-plugin-react-helmet": "^3.0.2",
     "gatsby-plugin-sharp": "^2.0.14",
     "gatsby-plugin-sitemap": "^2.1.0",
-    "gatsby-source-filesystem": "^2.0.8",
+    "gatsby-remark-copy-linked-files": "^2.0.13",
+    "gatsby-remark-images": "^3.0.14",
+    "gatsby-remark-relative-images": "^0.2.2",
+    "gatsby-source-filesystem": "^2.0.38",
     "gatsby-source-graphql": "^2.0.18",
+    "gatsby-transformer-remark": "^2.3.12",
     "gatsby-transformer-sharp": "^2.1.8",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.8.0",
