--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-helmet": "^5.2.0",
-    "react-test-renderer": "^16.8.6"
+    "react-test-renderer": "^16.8.6",
+    "rehype-react": "^3.1.0"
   },
   "devDependencies": {
     "eslint-config-airbnb": "^17.1.0",
