--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "babel-jest": "^24.8.0",
     "babel-preset-gatsby": "^0.1.11",
     "chokidar": "^3.0.1",
+    "downshift": "^3.2.10",
+    "fuzzy-search": "^3.0.1",
     "gatsby": "^2.8.3",
     "gatsby-image": "^2.0.20",
     "gatsby-plugin-create-client-paths": "^2.0.2",
