--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
   },
   "devDependencies": {
     "eslint-config-airbnb": "^17.1.0",
+    "eslint-import-resolver-webpack": "^0.11.1",
     "eslint-plugin-react-hooks": "^1.6.0",
     "netlify-lambda": "^1.2.0",
     "npm-run-all": "^4.1.5",
