--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "babel-jest": "^24.8.0",
+    "babel-plugin-styled-components": "^1.10.0",
     "babel-preset-gatsby": "^0.1.11",
     "chokidar": "^3.0.1",
     "downshift": "^3.2.10",
@@ -46,6 +47,7 @@
     "gatsby-plugin-react-helmet": "^3.0.2",
     "gatsby-plugin-sharp": "^2.1.3",
     "gatsby-plugin-sitemap": "^2.1.0",
+    "gatsby-plugin-styled-components": "^3.0.7",
     "gatsby-remark-copy-linked-files": "^2.0.13",
     "gatsby-remark-images": "^3.0.14",
     "gatsby-remark-relative-images": "^0.2.2",
@@ -63,7 +65,8 @@
     "react-dom": "^16.7.0",
     "react-helmet": "^5.2.0",
     "react-test-renderer": "^16.8.6",
-    "rehype-react": "^3.1.0"
+    "rehype-react": "^3.1.0",
+    "styled-components": "^4.3.0"
   },
   "devDependencies": {
     "eslint-config-airbnb": "^17.1.0",
