--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "react-helmet": "^5.2.0",
     "react-test-renderer": "^16.8.6",
     "rehype-react": "^3.1.0",
-    "styled-components": "^4.3.0"
+    "styled-components": "^4.3.0",
+    "urql": "^1.0.5"
   },
   "devDependencies": {
     "eslint-config-airbnb": "^17.1.0",
