--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "test:debug": "jest --inspect-brk test --runInBand"
   },
   "dependencies": {
+    "apollo-link-schema": "^1.2.3",
     "apollo-server-lambda": "^2.6.4",
     "babel-jest": "^24.8.0",
     "babel-plugin-styled-components": "^1.10.0",
