--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,23 +1,24 @@
 {
-    "compilerOptions": {
-        "target": "ES6",
-        "allowSyntheticDefaultImports": true,
-        "experimentalDecorators": true,
-        "baseUrl": "src",
-        "jsx": "react",
-        "paths": {
-            "*": ["*", "src/*"]
-        }
-    },
-    "typeAcquisition": {
-        "enable": true
-    },
-    "typingOptions": {
-        "enableAutoDiscovery": true
-    },
-    "compileOnSave": true,
-    "allowJS": true,
-    "include": [
-        "src/**/*"
-    ]
+  "compilerOptions": {
+      "target": "ES6",
+      "allowSyntheticDefaultImports": true,
+      "experimentalDecorators": true,
+      "baseUrl": "src",
+      "jsx": "react",
+      "paths": {
+          "*": ["*", "src/*"]
+      }
+  },
+  "testEnvironment": "node",
+  "typeAcquisition": {
+      "enable": true
+  },
+  "typingOptions": {
+      "enableAutoDiscovery": true
+  },
+  "compileOnSave": true,
+  "allowJS": true,
+  "include": [
+      "src/**/*"
+  ]
 }
